@@ -250,6 +250,9 @@ Trunk (unreleased changes)
 
     HADOOP-5625. Add operation duration to clienttrace. (Lei Xu via cdouglas)
 
+    HADOOP-5705. Improve TotalOrderPartitioner efficiency by updating the trie
+    construction. (Dick King via cdouglas)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
